# genomeguesser

./: Cargo.toml  LICENSE  Readme.md
.github/workflows/: main.yml
inst/: genome1.fasta  genome1.fasta.fai  genome2.fasta  genome2.fasta.fai  variants_0based.tsv  variants_1based.tsv  variants_1based_nochr.tsv
src/: main.rs  tests.rs
wix/: main.wxs
