[package]
name = "genomeguesser"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/selkamand/genomeguesser"
authors = ["Sam El-Kamand <selkamand@ccia.org.au>"]
description = "Identifying the reference genome used for variant calling and determining whether variant positions are from a 0-based or 1-based coordinate system"

[package.metadata.wix]
upgrade-guid = "18D4069C-FF85-46A5-82DD-41BA349C7773"
path-guid = "179E52C2-A17A-49CA-91FD-A7A2AE1AEFC4"
license = "MIT"
eula = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.1", features = ["derive", "cargo"] }
colored = "2.1.0"
csv = "1.3.0"
rust-htslib = "0.45.0"
serde = { version = "1.0.196", features = ["derive"] }

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.17.0"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = ["shell", "npm", "msi"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = [
  "aarch64-apple-darwin",
  "x86_64-apple-darwin",
  "x86_64-unknown-linux-gnu",
]
# Publish jobs to run in CI
pr-run-mode = "plan"
# The archive format to use for windows builds (defaults .zip)
windows-archive = ".tar.gz"
# The archive format to use for non-windows builds (defaults .tar.xz)
unix-archive = ".tar.gz"
# A namespace to use when publishing this package to the npm registry
npm-scope = "@selkamand"
# Whether to install an updater program
install-updater = true
